overwrite spurious percent colspan widths - bug 46944 r=karnaze sr=attinasi